add feature icons

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 		<div class="jumbotron text-center">
 			<h2>Poznaj gorące technologie:</h2>
 			<ul class="features-list">
-				<li>Tworzenie layoutów html/css</li>
-				<li>Programowanie w Javascript wg. EC</li>
-				<li>React</li>
-				<li>React Native</li>
+        <li><i class="fab fa-html5"></i> Tworzenie layoutów html/css</li>
+				<li><i class="fab fa-js-square"></i> Programowanie w Javascript wg. EC</li>
+				<li><i class="fab fa-react"></i> React</li>
+				<li><i class="fab fa-react"></i> React Native</li>
 			</ul>
 			<hr class="line">
 		</div>
