Add social media and text with link in resource

--- a/index.html
+++ b/index.html
@@ -127,29 +127,20 @@
         <div class="row text-center">
           <div class="col-md-4">
             <div class="resource">
-              <i class="fas fa-terminal fa-5x"></i>
-              <h3>Terminal</h3>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente minus aut, officiis iusto excepturi
-                culpa numquam qui accusantium debitis hic provident repellat. Eveniet incidunt laudantium odit aliquid
-                ullam sequi reiciendis?</p>
+              <a href="https://pl.wikipedia.org/wiki/Terminal_komputerowy" target="_blank"><i class="fas fa-terminal fa-5x"></i><h3>Terminal</h3></a>
+              <p>urządzenie pozwalające człowiekowi na pracę z komputerem lub systemem komputerowym. Terminal musi posiadać urządzenie wejściowe do wprowadzania instrukcji oraz urządzenie wyjściowe do przekazywania informacji operatorowi. Terminal jest stacją sieci komputerowej lub w systemie (np. w Internecie), służącą do wprowadzania lub odczytywania danych. Sam terminal nie musi mieć nawet procesora w sensie jednego układu, przykładowo popularne w latach 80. w Polsce terminale Mera serii 7xxx</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="resource">
-              <i class="fab fa-btc fa-5x"></i>
-              <h3>Bitcoin</h3>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente minus aut, officiis iusto excepturi
-                culpa numquam qui accusantium debitis hic provident repellat. Eveniet incidunt laudantium odit aliquid
-                ullam sequi reiciendis?</p>
+              <a href="https://pl.wikipedia.org/wiki/Bitcoin" target="_blank"><i class="fab fa-btc fa-5x"></i><h3>Bitcoin</h3></a>
+              <p> kryptowaluta wprowadzona w 2009 roku przez osobę (bądź grupę osób) o pseudonimie Satoshi Nakamoto. Nazwa odnosi się także do używającego jej otwartoźródłowego oprogramowania oraz sieci peer-to-peer, którą formuje. Od 2009 do 2021 roku, oprogramowanie do obsługi rozwiązania (Bitcoin Core), pobrano ponad 5,5 mln razy. „W marcu 2017 roku Polska znajdowała się na 9. miejscu na liście z liczbą ponad 126 tys. pobrań.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="resource">
-              <i class="fab fa-js-square fa-5x"></i>
-              <h3>Javascript</h3>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente minus aut, officiis iusto excepturi
-                culpa numquam qui accusantium debitis hic provident repellat. Eveniet incidunt laudantium odit aliquid
-                ullam sequi reiciendis?</p>
+              <a href="https://pl.wikipedia.org/wiki/Javascript" target="_blank"><i class="fab fa-js-square fa-5x"></i><h3>Javascript</h3></a>
+              <p>JavaScript (w skrócie JS) – skryptowy język programowania, stworzony przez firmę Netscape, najczęściej stosowany na stronach internetowych. Twórcą JavaScriptu jest Brendan Eich. W połowie lat 90. XX wieku organizacja ECMA wydała na podstawie JavaScriptu standard języka skryptowego o nazwie ECMAScript, aktualnie rozwijaniem tego standardu zajmuje się komisja TC39.</p>
             </div>
           </div>
         </div>
@@ -225,6 +216,12 @@
         </a>
         <a href="https://www.instagram.com" target="_blank">
           <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+          <i class="fab fa-facebook fa-2x"></i>
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+          <i class="fab fa-twitter fa-2x"></i>
         </a>
         <p> &copy; Copyright by ALK3 students 2021 </p>
       </div>
